[package]
name = "oner_induction"
version = "0.2.1"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2018"
description = "An implementation of the 1R rule induction algorithm"
license = "MPL-2.0+"
repository = "https://github.com/d6y/oner_induction"
readme = "README.md"
keywords = ["machine-learning", "data-science", "rules"]
categories = ["science"]
exclude = [".github/"]

[dependencies]
ndarray = "0.13"
itertools = "0.9"
rustc-hash = "1.1.0"
